--- a/src/app/usuario/login/login.component.html
+++ b/src/app/usuario/login/login.component.html
@@ -13,21 +13,22 @@
                       <div class="col-lg-6">
                           <div class="p-5">
                               <div class="text-center">
-                                  <h1 class="h4 text-gray-900 mb-4">Faça Login!</h1>
+                                  <h1 class="h4 text-gray-900 mb-4">Bem vindo!</h1>
                               </div>
-                              <form [formGroup]="usuarioForm" class="user">
+                              <form [formGroup]="usuarioForm" (ngSubmit)="onSubmit()" class="user">
                                   <div class="form-group">
                                       <input formControlName="email" type="email" class="form-control form-control-user"
                                           id="exampleInputEmail" aria-describedby="emailHelp"
-                                          placeholder="email@example.com">
-                                  </div>
+                                          placeholder="email@example.com" required>
+                                        </div>
                                   <div class="form-group">
-                                      <input formControlName="pasword" type="password" class="form-control form-control-user"
-                                          id="exampleInputPassword" placeholder="Senha">
+                                      <input formControlName="password" type="password" class="form-control form-control-user"
+                                          id="exampleInputPassword" placeholder="Senha" required>
                                   </div>
                                   <div class="form-group">
                                       <div class="custom-control custom-checkbox small">
                                           <input type="checkbox" class="custom-control-input" id="customCheck">
+                                          
                                           <label class="custom-control-label" for="customCheck">Lembra do meu acesso
                                               </label>
                                       </div>
@@ -37,11 +38,11 @@
                                   </button>
                               </form>
                               <hr>
-                              <!-- <div class="text-center">
-                                  <a class="small" href="forgot-password.html">Forgot Password?</a>
-                              </div> -->
                               <div class="text-center">
-                                  <a class="small" href="register.html">Criar um acesso!</a>
+                                  <a class="small" [routerLink]="['/esqueci-minha-senha']">Esqueci minha senha?</a>
+                              </div>
+                              <div class="text-center">
+                                  <a class="small" [routerLink]="['/criar-conta']">Criar um acesso!</a>
                               </div> 
                           </div>
                       </div>
