--- a/src/styles/sb-admin-2.css
+++ b/src/styles/sb-admin-2.css
@@ -10598,10 +10598,9 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url('../assets/img/login_logo.png');
+  background: url('../assets/img/sistema.png');
   background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .bg-register-image {
