--- a/src/styles/sb-admin-2.css
+++ b/src/styles/sb-admin-2.css
@@ -10604,7 +10604,7 @@ a:focus {
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("../assets/img/cadastro.jpg");
   background-position: center;
   background-size: cover;
 }
