--- a/src/app/usuario/login/criar-conta/criar-conta.component.html
+++ b/src/app/usuario/login/criar-conta/criar-conta.component.html
@@ -10,34 +10,40 @@
                       <div class="text-center">
                           <h1 class="h4 text-gray-900 mb-4">Crie a sua conta!</h1>
                       </div>
-                      <form class="user">
+                      <form [formGroup]="usuarioForm" (ngSubmit)="onSubmit()" class="user">
                           <div class="form-group row">
                               <div class="col-sm-6 mb-3 mb-sm-0">
-                                  <input type="text" class="form-control form-control-user" id="exampleFirstName"
+                                  <input formControlName="nome" type="text" class="form-control form-control-user" id="exampleFirstName"
                                       placeholder="Nome" required>
                               </div>
                               <div class="col-sm-6">
-                                  <input type="text" class="form-control form-control-user" id="exampleLastName"
+                                  <input type="text" formControlName="sobrenome"  class="form-control form-control-user" id="exampleLastName"
                                       placeholder="Sobrenome" required>
                               </div>
                           </div>
-                          <div class="form-group">
-                              <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                          <div class="form-group row">
+                              <div class="col-sm-6 mb-3 mb-sm-0">
+                                  <input type="email" formControlName="email" class="form-control form-control-user" id="exampleInputEmail"
                                   placeholder="Email" required>
+                              </div>
+                              <div class="col-sm-6 mb-3 mb-sm-0">
+                                <input type="text" formControlName="telefone" class="form-control form-control-user" id="exampleInputEmail"
+                                placeholder="(00) 00000-0000" mask="(00) 00000-0000" required>
+                            </div>
                           </div>
                           <div class="form-group row">
                               <div class="col-sm-6 mb-3 mb-sm-0">
-                                  <input type="password" class="form-control form-control-user"
+                                  <input type="password" formControlName="senha"  class="form-control form-control-user"
                                       id="exampleInputPassword" placeholder="Senha" required>
                               </div>
                               <div class="col-sm-6">
-                                  <input type="password" class="form-control form-control-user"
+                                  <input type="password" formControlName="repitaSenha" class="form-control form-control-user"
                                       id="exampleRepeatPassword" placeholder="Repita a senha" required>
                               </div>
                           </div>
-                          <a href="login.html" class="btn btn-primary btn-user btn-block">
+                          <button type="submit" class="btn btn-primary btn-user btn-block">
                               Criar conta
-                          </a>
+                          </button>
                       </form>
                       <hr>
                       <div class="text-center">
