--- a/src/app/usuario/login/login.component.html
+++ b/src/app/usuario/login/login.component.html
@@ -1,57 +1,60 @@
 <div class="container">
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
+        <div class="col-xl-10 col-lg-12 col-md-9">
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">Bem vindo!</h1>
+                                </div>
+                                <form [formGroup]="usuarioForm" (ngSubmit)="onSubmit()" class="user">
+                                    <div class="form-group">
+                                        <input formControlName="email" type="email"
+                                            class="form-control form-control-user" id="exampleInputEmail"
+                                            aria-describedby="emailHelp" placeholder="email@example.com" required>
+                                        <small class="form-text text-danger"
+                                            *ngIf="!usuarioForm.get('email').valid && usuarioForm.get('email').touched">
+                                            Digite seu e-mail
+                                        </small>
+                                    </div>
 
-  <!-- Outer Row -->
-  <div class="row justify-content-center">
-
-      <div class="col-xl-10 col-lg-12 col-md-9">
-
-          <div class="card o-hidden border-0 shadow-lg my-5">
-              <div class="card-body p-0">
-                  <!-- Nested Row within Card Body -->
-                  <div class="row">
-                      <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                      <div class="col-lg-6">
-                          <div class="p-5">
-                              <div class="text-center">
-                                  <h1 class="h4 text-gray-900 mb-4">Bem vindo!</h1>
-                              </div>
-                              <form [formGroup]="usuarioForm" (ngSubmit)="onSubmit()" class="user">
-                                  <div class="form-group">
-                                      <input formControlName="email" type="email" class="form-control form-control-user"
-                                          id="exampleInputEmail" aria-describedby="emailHelp"
-                                          placeholder="email@example.com" required>
+                                    <div class="form-group">
+                                        <input formControlName="password" type="password"
+                                            class="form-control form-control-user" id="exampleInputPassword"
+                                            placeholder="Senha" required>
+                                        <small class="form-text text-danger"
+                                            *ngIf="!usuarioForm.get('password').valid && usuarioForm.get('password').touched">
+                                            Digite sua senha
+                                        </small>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox small">
+                                            <input type="checkbox" class="custom-control-input" id="customCheck">
+                                            <label class="custom-control-label" for="customCheck">Lembra do meu acesso
+                                            </label>
                                         </div>
-                                  <div class="form-group">
-                                      <input formControlName="password" type="password" class="form-control form-control-user"
-                                          id="exampleInputPassword" placeholder="Senha" required>
-                                  </div>
-                                  <div class="form-group">
-                                      <div class="custom-control custom-checkbox small">
-                                          <input type="checkbox" class="custom-control-input" id="customCheck">
-                                          
-                                          <label class="custom-control-label" for="customCheck">Lembra do meu acesso
-                                              </label>
-                                      </div>
-                                  </div>
-                                  <button class="btn btn-primary btn-user btn-block" type="submit">
-                                      Login
-                                  </button>
-                              </form>
-                              <hr>
-                              <div class="text-center">
-                                  <a class="small" [routerLink]="['/esqueci-minha-senha']">Esqueci minha senha?</a>
-                              </div>
-                              <div class="text-center">
-                                  <a class="small" [routerLink]="['/criar-conta']">Criar um acesso!</a>
-                              </div> 
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-
-      </div>
-
-  </div>
-
+                                    </div>
+                                    <button class="btn btn-primary btn-user btn-block" type="submit">
+                                        Login
+                                    </button>
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" [routerLink]="['/esqueci-minha-senha']">Esqueci minha senha?</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" [routerLink]="['/criar-conta']">Criar um acesso!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
