implementacao da tela de cadastro de equipamento

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <!-- *ngIf="userService.user.token" -->
-<ul *ngIf="false" class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
+<ul *ngIf="true" class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
     id="accordionSidebar">
 
   <!-- Sidebar - Brand -->
