--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,12 +27,12 @@
         </div>
       </div> -->
 
-      <div [routerLink]="['/operations/salesPosition']" class="col-xl-3 col-md-6 mb-4" style="cursor:pointer">
+      <div [routerLink]="['/cadastro']" class="col-xl-3 col-md-6 mb-4" style="cursor:pointer">
         <div class="card border-left-success shadow h-100 py-2">
           <div class="card-body">
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
-                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Transactions (Total)</div>
+                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Cadastro</div>
                 <div class="h5 mb-0 font-weight-bold text-gray-800">{{dashboard?.totalTransactions}}</div>
               </div>
               <div class="col-auto">
