tela de cadastro de equipamento

--- a/src/app/cadastro/equipamento/equipamento.component.html
+++ b/src/app/cadastro/equipamento/equipamento.component.html
@@ -7,34 +7,32 @@
     </div>
     <div class="card-body">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 py-2" >
           
           <input type="text" placeholder="Nome do Equipamento" class="form-control">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 py-2">
           <input type="text" placeholder="Modelo do Equipamento" class="form-control">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 py-2">
           <input type="text" placeholder='Nº de Série' class="form-control">
         </div>
-        <div class="col-sm-4">
+      </div>
+      <div class="row">
+        <div class="col-sm-4 py-2">
           <input type="text" placeholder="Patrimônio" class="form-control">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 py-2">
           <input type="text" placeholder="Cor" class="form-control">
         </div>
-        <select name="time" class="form-control">
-          <option value="ind">INDISPONÍVEL</option>
-          <option value="fla">DISPONÍVEL</option>
-          <option value="flu">DANIFICADO</option>
-          <option value="vasco">EM MANUTENÇÃO</option>
-          <option value="vasco">EM ESTOQUE</option>
-          <option value="vasco">FORA DE ESTOQUE</option>
-        </select>
-        
-          <button type='submit' class="btn btn-primay btn-sm" >Cadastrar Equipamento</button> 
-        
+        <div class="col-sm-4 py-2">
+          <select name="status" (change)="onChangeStatus($event)" class="form-control"> 
+            <option [value]="null" [disabled]='true'>Selecione</option>
+            <option *ngFor="let i of listaStatus" [value]="i.value">{{i.texto}}</option>
+          </select>
+        </div>
       </div>
+        <button type='submit' class="btn btn-primary btn-sm float-right" >Cadastrar Equipamento</button> 
     </div>
   </div>
 </div>
