--- a/src/styles/sb-admin-2.css
+++ b/src/styles/sb-admin-2.css
@@ -10598,7 +10598,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url('../assets/img/sistema.png');
+  background: url('../assets/img/login_home.jpg');
   background-position: center;
   background-size: cover;
 }
