--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,2 +1,19 @@
-
-  <router-outlet></router-outlet>
+  <div class="container">
+      <div class="card shadow mb-5 rounded">
+       
+        <div class="card-body text-center">
+          <div class="row">
+            <div class="col-sm-4">
+             <a [routerLink]="['equipamento']" routerLinkActive="link-selection" >Equipamento</a> 
+            </div>
+            <div class="col-sm-4">
+              <a [routerLink]="['entrada']" routerLinkActive="link-selection" >Entrada</a> 
+            </div>
+            <div class="col-sm-4">
+              <a [routerLink]="['saida']" routerLinkActive="link-selection" >Saída</a> 
+            </div>
+          </div>
+        </div>
+      </div>
+    <router-outlet></router-outlet>
+  </div>
