--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,7 +38,7 @@
             aria-haspopup="true" aria-expanded="false">
             <span class="mr-2 d-none d-lg-inline text-gray-600">Emerson Alves</span>
             <!-- <img class="img-profile rounded-circle" > -->
-            <img src="assets/img/Logo.png" style="max-height:30px; object-fit: contain; " />
+            <!-- <img src="assets/img/Logo.png" style="max-height:30px; object-fit: contain; " /> -->
           </a>
           <!-- Dropdown - User Information -->
           <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
