--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,15 +11,15 @@
     <!-- Content Row -->
     <div class="row">
 
-      <div [routerLink]="['/cadastro']" class="col-xl-3 col-md-6 mb-4" style="cursor:pointer">
+      <div [routerLink]="['/estoque']" class="col-xl-3 col-md-6 mb-4" style="cursor:pointer">
         <div class="card border-left-primary shadow h-100 py-2">
           <div class="card-body">
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
-                <div class="text-sm font-weight-bold text-primary text-uppercase mb-1">Cadastrar</div>
+                <div class="text-sm font-weight-bold text-primary text-uppercase mb-1">Estoque</div>
               </div>
               <div class="col-auto">
-                <i class="fas fa-desktop fa-2x text-gray-300"></i>
+                <i class="fas fa-box-open fa-2x text-gray-300"></i>
               </div>
             </div>
           </div>
