--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <!-- *ngIf="userService.user.token" -->
-<ul *ngIf="true" class="navbar-nav bg-gradient-light sidebar sidebar-light accordion"
+<ul *ngIf="usuarioService?.token?.token" class="navbar-nav bg-gradient-light sidebar sidebar-light accordion"
     id="accordionSidebar">
 
   <!-- Sidebar - Brand -->
@@ -51,13 +51,14 @@
   <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
       <i class="fas fa-fw fa-cog"></i>
-      <span>Operações</span>
+      <span>Estoque</span>
     </a>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
       <div class="bg-white py-2 collapse-inner rounded">
         <!-- <h6 class="collapse-header">Custom Components:</h6> -->
-        <a class="collapse-item" [routerLink]="['/support/user']">Cadastrar Equipamentos</a>
-        <a class="collapse-item" [routerLink]="['operations/salesPosition']">Entrada & Saida</a>
+        <a class="collapse-item" [routerLink]="['/estoque/equipamento']">Cadastrar Equipamentos</a>
+        <a class="collapse-item" [routerLink]="['/estoque/entrada']">Entrada</a>
+        <a class="collapse-item" [routerLink]="['/estoque/saida']">Saída</a>
         <a class="collapse-item" [routerLink]="['operations/product-upload']">Inventário</a>
         <!-- <a class="collapse-item">Rental Positions</a> -->
         <!-- <a class="collapse-item">KPI's</a> -->
