--- a/src/app/usuario/login/criar-conta/criar-conta.component.html
+++ b/src/app/usuario/login/criar-conta/criar-conta.component.html
@@ -1,61 +1,64 @@
 <div class="container">
-
-  <div class="card o-hidden border-0 shadow-lg my-5">
-      <div class="card-body p-0">
-          <!-- Nested Row within Card Body -->
-          <div class="row">
-              <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-              <div class="col-lg-7">
-                  <div class="p-5">
-                      <div class="text-center">
-                          <h1 class="h4 text-gray-900 mb-4">Crie a sua conta!</h1>
-                      </div>
-                      <form [formGroup]="usuarioForm" (ngSubmit)="onSubmit()" class="user">
-                          <div class="form-group row">
-                              <div class="col-sm-6 mb-3 mb-sm-0">
-                                  <input formControlName="nome" type="text" class="form-control form-control-user" id="exampleFirstName"
-                                      placeholder="Nome" required>
-                              </div>
-                              <div class="col-sm-6">
-                                  <input type="text" formControlName="sobrenome"  class="form-control form-control-user" id="exampleLastName"
-                                      placeholder="Sobrenome" required>
-                              </div>
-                          </div>
-                          <div class="form-group row">
-                              <div class="col-sm-6 mb-3 mb-sm-0">
-                                  <input type="email" formControlName="email" class="form-control form-control-user" id="exampleInputEmail"
-                                  placeholder="Email" required>
-                              </div>
-                              <div class="col-sm-6 mb-3 mb-sm-0">
-                                <input type="text" formControlName="telefone" class="form-control form-control-user" id="exampleInputEmail"
-                                placeholder="(00) 00000-0000" mask="(00) 00000-0000" required>
+    <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card-body p-0">
+            <!-- Nested Row within Card Body -->
+            <div class="row">
+                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <div class="col-lg-7">
+                    <div class="p-5">
+                        <div class="text-center">
+                            <h1 class="h4 text-gray-900 mb-4">Crie a sua conta!</h1>
+                        </div>
+                        <form [formGroup]="usuarioForm" (ngSubmit)="onSubmit()" class="user">
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input formControlName="nome" type="text" class="form-control form-control-user"
+                                        id="exampleFirstName" placeholder="Nome" required>
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="text" formControlName="sobrenome"
+                                        class="form-control form-control-user" id="exampleLastName"
+                                        placeholder="Sobrenome" required>
+                                </div>
                             </div>
-                          </div>
-                          <div class="form-group row">
-                              <div class="col-sm-6 mb-3 mb-sm-0">
-                                  <input type="password" formControlName="senha"  class="form-control form-control-user"
-                                      id="exampleInputPassword" placeholder="Senha" required>
-                              </div>
-                              <div class="col-sm-6">
-                                  <input type="password" formControlName="repitaSenha" class="form-control form-control-user"
-                                      id="exampleRepeatPassword" placeholder="Repita a senha" required>
-                              </div>
-                          </div>
-                          <button type="submit" class="btn btn-primary btn-user btn-block">
-                              Criar conta
-                          </button>
-                      </form>
-                      <hr>
-                      <div class="text-center">
-                          <a class="small" [routerLink]="['/esqueci-minha-senha']">Esqueceu sua senha?</a>
-                      </div>
-                      <div class="text-center">
-                          <a class="small" [routerLink]="['/']">Já possui uma conta? Faça o login!</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="email" formControlName="email" class="form-control form-control-user"
+                                        id="exampleInputEmail" placeholder="Email" required>
+                                </div>
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="text" formControlName="telefone" class="form-control form-control-user"
+                                        id="exampleInputEmail" placeholder="(00) 00000-0000" mask="(00) 00000-0000"
+                                         required>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="password" formControlName="senha"
+                                        class="form-control form-control-user" id="exampleInputPassword"
+                                        placeholder="Senha" required>
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="password" formControlName="repitaSenha"
+                                        class="form-control form-control-user" id="exampleRepeatPassword"
+                                        placeholder="Repita a senha" required>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
+                                Criar conta
+                            </button>
+                        </form>
+                        <hr>
+                        <div class="text-center">
+                            <a class="small" [routerLink]="['/esqueci-minha-senha']">Esqueceu sua senha?</a>
+                        </div>
+                        <div class="text-center">
+                            <a class="small" [routerLink]="['/']">Já possui uma conta? Faça o login!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
