--- a/src/app/usuario/login/login.component.html
+++ b/src/app/usuario/login/login.component.html
@@ -1,3 +1,11 @@
+<ngx-spinner 
+bdColor = "rgba(45,85,198,0.71)" 
+size = "medium" 
+color = "#ffffff" 
+type = "square-loader" 
+[fullScreen] = "true">
+<p style="color: white"> Carregando... </p>
+</ngx-spinner>
 <div class="container">
     <!-- Outer Row -->
     <div class="row justify-content-center">
@@ -34,6 +42,9 @@
                                     <button class="btn btn-primary btn-user btn-block" type="submit">
                                         Login
                                     </button>
+                                    <div *ngIf="erro && messageError != ''" class="alert alert-danger mt-2">
+                                        <div class="text-center text-danger">{{messageError}}</div>
+                                    </div>
                                 </form>
                                 <hr>
                                 <div class="text-center">
