ajustes em cadastro de usuario

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -3,7 +3,7 @@
         <div class="card-body text-center">
           <div class="row">
             <div class="col-sm-6">
-             <a [routerLink]="['equipamento']" routerLinkActive="link-selection">Equipamento</a> 
+             <a [routerLink]="['equipamento']" routerLinkActive="link-selection">Entrada</a> 
             </div>
             
             <div class="col-sm-6">
