--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -57,7 +57,7 @@
             <!-- <div class="dropdown-divider"></div> -->
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
               <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-              Logout
+              Sair
             </a>
           </div>
         </li>
@@ -89,15 +89,24 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Mas já? Deseja realmente sair? </h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
-      <div class="modal-body">Are you sure you want to logout ?</div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col">
+            <i class="far fa-sad-tear text-dark fa-2x"></i>
+            Tem certeza que deseja sair?
+          </div>
+
+        </div>
+       
+      </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a (click)="logout()" class="btn btn-primary" href="#" data-dismiss="modal">Logout</a>
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Vou ficar mais um pouco</button>
+        <a (click)="logout()" class="btn btn-primary" href="#" data-dismiss="modal">Sair</a>
       </div>
     </div>
   </div>
