--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -56,8 +56,7 @@
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
       <div class="bg-white py-2 collapse-inner rounded">
         <!-- <h6 class="collapse-header">Custom Components:</h6> -->
-        <a class="collapse-item" [routerLink]="['/estoque/equipamento']">Cadastrar Equipamentos</a>
-        <a class="collapse-item" [routerLink]="['/estoque/entrada']">Entrada</a>
+        <a class="collapse-item" [routerLink]="['/estoque/equipamento']">Entrada Equipamentos</a>
         <a class="collapse-item" [routerLink]="['/estoque/saida']">Saída</a>
         <a class="collapse-item" [routerLink]="['operations/product-upload']">Inventário</a>
         <!-- <a class="collapse-item">Rental Positions</a> -->
