--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,6 +25,21 @@
           </div>
         </div>
       </div>
+
+      <div [routerLink]="['/estoque']" class="col-xl-3 col-md-6 mb-4" style="cursor:pointer">
+        <div class="card border-left-secondary shadow h-100 py-2">
+          <div class="card-body">
+            <div class="row no-gutters align-items-center">
+              <div class="col mr-2">
+                <div class="text-sm font-weight-bold text-secondary text-uppercase mb-1">Equipamentos</div>
+              </div>
+              <div class="col-auto">
+                <i class="fas fa-laptop fa-2x text-gray-300"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- adicionar novas divs -->
 
 
