--- a/src/styles/sb-admin-2.css
+++ b/src/styles/sb-admin-2.css
@@ -10610,7 +10610,7 @@ a:focus {
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("../assets/img/reset_senha.jpg");
   background-position: center;
   background-size: cover;
 }
