--- a/src/app/cadastro/equipamento/equipamento.component.html
+++ b/src/app/cadastro/equipamento/equipamento.component.html
@@ -62,7 +62,7 @@ type = "square-loader"
               <input type="text" formControlName="departamento" placeholder="Departamento" class="form-control">
             </div>
             <div class="col-sm-4 py-2">
-              <input type="date" class="form-control" (change)="changeDate()" formControlName="dataEntrada">
+              <input type="date" class="form-control" formControlName="dataEntrada">
             </div>
         </div>
         <button type="submit" class="btn btn-primary float-right">Salvar</button> 
