--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,6 +32,7 @@
             <div class="row no-gutters align-items-center">
               <div class="col mr-2">
                 <div class="text-sm font-weight-bold text-secondary text-uppercase mb-1">Equipamentos</div>
+                <div class="h5 mb-0 font-weight-bold text-gray-800">{{dashboard?.countEquipamento}}</div>
               </div>
               <div class="col-auto">
                 <i class="fas fa-laptop fa-2x text-gray-300"></i>
