implementando filtro de busca

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -37,7 +37,7 @@
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionSidebar">
       <div class="bg-white py-2 collapse-inner rounded">
         <!-- <h6 class="collapse-header">Custom Components:</h6> -->
-        <a class="collapse-item" [routerLink]="['/support/user']">Equipamentos</a>
+        <a class="collapse-item" [routerLink]="['/consulta/equipamento']">Equipamentos</a>
         <a class="collapse-item" [routerLink]="['/support/user/approve']">Usuários</a>
         <a class="collapse-item" [routerLink]="['/support/brand']">Fabricantes</a>
         <a class="collapse-item" [routerLink]="['/support/category']">Departamentos</a>
