--- a/src/app/cadastro/equipamento/equipamento.component.html
+++ b/src/app/cadastro/equipamento/equipamento.component.html
@@ -6,6 +6,15 @@ type = "square-loader"
 [fullScreen] = "true">
 <p style="color: white"> Carregando... </p>
 </ngx-spinner>
+
+<div *ngIf="sucesso" class="alert alert-success text-success text-center">
+  Requisição enviada com sucesso!
+</div>
+
+<div *ngIf="erro && messageError != ''" class="alert alert-danger text-center text-danger">
+  Houve uma falha na requisição, consulte o log do servidor {{messageError}}
+</div>
+
   <div class="card shadow mb-5 rounded">
     <div class="card-header">
       <h6 class="card-title font-weight-bold text-primary text-uppercase mb-1">Preencha o formulário</h6>
