--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div [routerLink]="['/estoque']" class="col-xl-3 col-md-6 mb-4" style="cursor:pointer">
+      <div [routerLink]="['/consulta/equipamento']" class="col-xl-3 col-md-6 mb-4" style="cursor:pointer">
         <div class="card border-left-secondary shadow h-100 py-2">
           <div class="card-body">
             <div class="row no-gutters align-items-center">
