ajustes na validacao de consulta

--- a/src/app/consulta/equipamento-consulta/equipamento-consulta.component.html
+++ b/src/app/consulta/equipamento-consulta/equipamento-consulta.component.html
@@ -63,7 +63,7 @@ type = "square-loader"
   </div>
 </div>
 
-<div class="card shadow mb-5 rounded">
+<div *ngIf="equipamentos.content" class="card shadow mb-5 rounded">
   <div class="card-header text-center">
     <label class="font-weight-bold text-primary text-uppercase mb-1">Resultados</label>
   </div>
