--- a/src/app/cadastro/saida/saida.component.html
+++ b/src/app/cadastro/saida/saida.component.html
@@ -1,51 +1,4 @@
-<div class="card shadow rounded mb-5">
-
-  <div class="card-header">
-    Saída
-  </div>
-  <div class="card-body">
-
-    <div class="row">
-      <div class="col-sm-4">
-
-        <div class="table-responsive text-center">
-          <table  class="table table-striped table-hover table table-bordered" id="dataTable"
-            width="100%" cellspacing="0">
-            <thead>
-              <tr>
-                <th>Selec.</th>
-                <th>ID</th>
-                <th>Nome</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let i of equipamentos">
-                <td class="text-center">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                    </label>
-                  </div>
-                </td>
-                <td>{{i.id}}</td>
-                <td>{{i.equipamento}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-
-
-
-
-
-
-
-       
-
-      </div>
-    </div>
-
-  </div>
-
-
-</div>
+<p>
+  Página em desenvolvimento
+</p>
+<a [routerLink]="['/home']">Retornar a página inicial</a>
